--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -99,6 +99,9 @@
                 </article>
             </main>
             
-            <a href="#">To the top</a>
+            <a href="#">To the Top</a>
+        <footer>
+            Brought to you by Amina Moosa
+        </footer>
     </body>
 </html>
