--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -18,28 +18,30 @@
         </header>
             <nav>
                 <a href="designs.html">Designs</a>
-                <a href="web_style_group_project.html">Group Project</a>
                 <a>Week 5</a>
                 <a href="design_week_6.html">Week 6</a>
+                <a href="web_style_group_project.html">Group Project</a>
+                <a href="designs_wireframe.html">Wireframes</a>
             </nav>
 
         <main>
-            <article>
-                <h2>Documentation of IxD Process</h2>
+            <article class="h-entry">
+                <div class="e-content">
+                <h2 class="p-name">Documentation of IxD Process</h2>
                     <p>
-                        <h3>Goal Alignment</h3>
+                        <h3 class="p-name">Goal Alignment</h3>
                         As stated earlier, the goal of this website is to function as a portfolio that highlights my creativity and accomplishments, 
                         as well as skills and projects that I've worked on. Additionally, the website will help me navigate my unique style, 
-                        branding and aesthetic (Fungies, 2023).<br>
+                        branding and aesthetic <cite>(Fungies, 2023)</cite>.<br>
                         The goal is for the users to interact with my work, and explore projects that I've worked on/have been a part of.  <br>
                         The User: As stated, there are two types of users for this website. The lived-in project user, such as lecturers 
                         and tutors for this course, and the imaginary user that comes to visit the portfolio. Visitors would entail people 
                         such as collaborators, and any industry professionals. The users should be able to interact/see displayed projects 
-                        and reach out to me. (Moritz Prätorius, 2024)<br>
+                        and reach out to me. <cite>(Moritz Prätorius, 2024)</cite><br>
                     </p>
 
                     <p>
-                        <h3>Information Structure - Content Mapping </h3>
+                        <h3 class="p-name">Information Structure - Content Mapping </h3>
                         Types of content:
                         <ul>
                             <li>Showcasing projects (project summaries, my role, tools/engine used, team size)</li>
@@ -50,7 +52,7 @@
                             <li>Resume and profile (an about me section)</li>
                             <li>Contact information (contact info and links to professional profiles such as GitHub)</li>
                         </ul>
-                        (Alvaro Trigo\'s Blog, 2022)<br>
+                        <cite>(Alvaro Trigo\'s Blog, 2022)</cite><br>
 
                         <figure>
                             <figcaption>Infomation contnt and how folders are structured</figcaption>
@@ -59,15 +61,15 @@
                     </p>
                         
                     <p>
-                        <h3>User Flow - Screens, Behaviour, and Decisions</h3>
+                        <h3 class="p-name">User Flow - Screens, Behaviour, and Decisions</h3>
                         <figure>
                             <figcaption>User Flow experience annotated</figcaption>
-                            <img src="../Images/Designs/Web_Style_Guide/blog_5_information_user_experience.png" alt="User flow experience annotated">
+                            <img class="u-photo user-experience-flow"src="../Images/Designs/Web_Style_Guide/blog_5_information_user_experience.png" alt="User flow experience annotated">
                         </figure>
                     </p>
 
                     <p>
-                        <h3>List and explanation of selected Interface Elements</h3>
+                        <h3 class="p-name">List and explanation of selected Interface Elements</h3>
                             In order to structure my user interface, I would like to focus on creating an intuitive, visually appealing, and functional design. 
                             The input controls would allow users to interact with my portfolio. <br>
                             This includes:
@@ -90,22 +92,22 @@
                                         </ul>
                                     </li>
                                 </ul>
-                        (CareerFoundry, 2019)
+                        <cite>(CareerFoundry, 2019)</cite>
                     </p>
 
                     <p>
-                        <h3>Style process documentation</h3>
+                        <h3 class="p-name">Style process documentation</h3>
                         <figure>
                             <figcaption>First image in the web style guide</figcaption>
-                            <img src="../Images/Designs/Web_Style_Guide/1.png" alt="First image in the web style guide">
+                            <img class="u-photo web-style-guide"  src="../Images/Designs/Web_Style_Guide/1.png" alt="First image in the web style guide">
                         </figure>
                         <figure>
                             <figcaption>Second image in the web style guide</figcaption>
-                            <img src="../Images/Designs/Web_Style_Guide/2.png" alt="Second image in the web style guide">
+                            <img class="u-photo web-style-guide" src="../Images/Designs/Web_Style_Guide/2.png" alt="Second image in the web style guide">
                         </figure>
                         <figure>
                             <figcaption>Third image in the web style guide</figcaption>
-                            <img src="../Images/Designs/Web_Style_Guide/3.png" alt="Third image in the web style guide">
+                            <img class="u-photo web-style-guide" src="../Images/Designs/Web_Style_Guide/3.png" alt="Third image in the web style guide">
                         </figure>
                     </p>
 
@@ -119,7 +121,7 @@
                     </p>
 
                     <p>
-                        <h3>References Material</h3>
+                        <h3 class="p-name">References Material</h3>
                         <a href="https://colin-moy.webflow.io/?utm_source=google&utm_medium=search&utm_campaign=SS-GoogleSearch-Nonbrand-DynamicSearchAds-Tier4&utm_term=dsa-1729073412468___703207072719__" class="u-url">Colin Moy</a>
                         Colin Moy's portfolio website is simplistic, creative and interactive. The creative ways to keep the user/viewer engaged. The one thing that I don't like the colour palette. <br>
                         <a href="https://www.karliskah.com/" class="u-url">Karlis Kah</a>
@@ -130,12 +132,12 @@
                     </p>
 
                     <p>
-                        <h3>References</h3>
+                        <h3 class="p-name">References</h3>
                         CareerFoundry. (2019). 32 UI Elements Designers Need To Know: 2025 Guide. [online] Available at: <a href="https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/" class="u-url"> https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/ </a>[Accessed 16 Mar. 2025]. <br>
                         Fungies (2023). Short Guide to Building Game Designer Portfolio - Fungies.io. [online] Fungies.io - Sell digital products seamlessly. Available at: <a href="https://fungies.io/short-guide-to-building-game-designer-portfolio/" class="u-url">https://fungies.io/short-guide-to-building-game-designer-portfolio/ </a>[Accessed 2 Mar. 2025]. <br>
                         Moritz Prätorius (2024). Game Designer Portfolio Website Examples (Best Of). [online] Slider Revolution. Available at:<a href="https://www.sliderrevolution.com/design/game-designer-portfolio-website/" class="u-url"> https://www.sliderrevolution.com/design/game-designer-portfolio-website/ </a>[Accessed 2 Mar. 2025].<br>
                     </p>
-
+                </div>
             </article>
         </main>
         
