--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -18,16 +18,18 @@
         </header>
             <nav>
                 <a href="designs.html">Designs</a>
-                <a href="web_style_group_project.html">Group Project</a>
                 <a href="design_week_5.html">Week 5</a>
                 <a>Week 6</a>
+                <a href="designs_web_style_group_project.html">Group Project</a>
+                <a href="designs_wireframe.html">Wireframes</a>
             </nav>
 
         <main>
-            <article>
-                <h2>Research for Design Section</h2>
+            <article class="h-entry">
+                <div class="e-content">
+                <h1 class="p-name">Research for Design Section</h1>
 
-                <h3>Style Guides</h3>
+                <h2 class="p-name">Style Guides</h2>
                     <p>
                         Goal and aesthetic as a single statement: 
                         My portfolio blends futuristic, tech-inspired aesthetics with interactive design, 
@@ -65,7 +67,7 @@
                         Final design Sketches:
                     </p>
 
-                <h3>Wireframes</h3>
+                <h2 class="p-name">Wireframes</h2>
                 <p>
                     Interaction Points:
                     Hover Effects: Buttons, cards and links should glow or shift colour subtley, 
@@ -91,10 +93,13 @@
                     <!--Wireframe images-->
                 </p>
                 
-
+            </div>
             </article>
 
         </main>
-        <a href="#">To the top</a>
+        <a href="#">To the Top</a>
+        <footer>
+            Brought to you by Amina Moosa
+        </footer>
     </body>
 </html>
