--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -82,7 +82,7 @@
                             </figure>
                         </p>
 
-                        <h3 class="p-summary p-name">Wireframe Ideas</h3>
+                        <h3 class="p-name">Wireframe Ideas</h3>
                         <p>
                             I am thinking of having a Homepage/ Landing page (my index.html) really short and simple, then having pages for my designs showcasing my 
                             wireframe. A page for my essay, and all my essays present but if clicked on, will lead you to a page that contains the whole essay and well 
@@ -93,7 +93,7 @@
                             </figure>
                         </p>
 
-                        <h3 class="p-name p-summary">References to inspiration websites</h3>
+                        <h3 class="p-name">References to inspiration websites</h3>
                         <p>
                             <a href="https://www.weareink.co.uk" class="u-url">https://www.weareink.co.uk</a>Links to an external site. <br>
                             <a href="https://doubble.group/sg" class="u-url">https://doubble.group/sg </a>Links to an external site.<br>
@@ -102,7 +102,7 @@
                             <a href="https://pinkmoon.co" class="u-url">https://pinkmoon.co</a> Links to an external site.<br>
                         </p>
                         
-                        <h3 class="p-name p-summary">References</h3>
+                        <h3 class="p-name">References</h3>
                         <p>
                             Moulthrop, S. (1991). You Say You Want a Revolution? Hypertext and the Laws of Media. Postmodern Culture, 1(3). 
                             Available at: <a href="https://doi.org/10.1353/pmc.1991.0019" class="u-url"> https://doi.org/10.1353/pmc.1991.0019 </a> Links to an external site. [Accessed 24 Feb. 2025]. <br>
