--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -51,13 +51,13 @@
                             </figure>
                         </p>
 
-                    <h3 class="p-name p-summary">Defining my visual aesthetic:</h3>
+                    <h3 class="p-name ">Defining my visual aesthetic:</h3>
                         <p>
                             The initial iteration of the visual aesthetic is tech-futuristic, since the target audience are people in the tech field. 
                             However, this is subject to change since one of the main goals for this website is readability.
                         </p>
 
-                    <h3 class="p-name p-summary">Reflection:</h3>
+                    <h3 class="p-name">Reflection:</h3>
                         <p>
                             In the past week, I've started working on my web-style guide. 
                             I've thought about things such as fonts, visual aesthetics, and colour palette.
@@ -66,7 +66,7 @@
                             In addition, I began incorporating metadata into my HTML pages.
                         </p>
 
-                    <h3 class="p-name p-summary">Struggles:</h3>
+                    <h3 class="p-name">Struggles:</h3>
                         <p>
                             I struggle with mapping the layout and composition of my website. 
                             My goal within the next coming weeks is to work on a good visual hierarchy of information; 
@@ -75,7 +75,7 @@
                             don't have a consistency, a familiarity pattern within my design structure.
                         </p>
 
-                    <h3 class="p-name p-summary">Proud of:</h3>
+                    <h3 class="p-name">Proud of:</h3>
                         <p>
                             I am proud of the basic foundation that the website is built on. 
                             All the information in my folder structures is sorted in an easy-to-navigate manner. 
@@ -83,7 +83,7 @@
                             since I do happen to have a procrastination problem.
                         </p>
 
-                    <h3 class="p-name p-summary">Going Forward:</h3>
+                    <h3 class="p-name">Going Forward:</h3>
                         <p>
                             Going forward, I'd like to work on my visual hierarchy of information presented on the 
                             website and incorporate UX Core Principles into the website. I'd also like to work on the 
