--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -18,32 +18,44 @@
         </header>
         <nav>
             <a>Designs</a>
-            <a href="web_style_group_project.html">Group Project</a>
             <a href="design_week_5.html">Week 5</a>
             <a href="design_week_6.html">Week 6</a>
+            <a href="web_style_group_project.html">Group Project</a>
+            <a href="designs_wireframe.html">Wireframes</a>
         </nav>
 
         <main>
-            <p>Follow along for my Design Journal and planning for this portfolio</p>
+            <article class="h-entry">
+                <div class="e-content">
+                    <h1 class="p-name">Design Section</h1>
+                    <p class="p-summary">Follow along for my Design Journal and planning for this portfolio</p>
 
-            <p>
-                Initial wireframe
-                <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
-            </p>
+                    
+                    <h2 class="p-name">Designs Week 5</h2>
+                        <p>
+                            <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
+                            <a href="design_week_5.html">View More...</a>
+                        </p>
 
-            <p>
-                Web-Style Guide Group Project<br>
-                <a href="web_style_group_project.html">View More...</a>
-            </p>
+                    <h2>Designs Week 6</h2>
+                        <p>
+                            Documentation of IxD process<br>
+                            <a href="web_style_guide_mapping.html">View More...</a>
+                        </p>
 
-            <p>
-                <h3>Web-Style Guide Mapping</h3>
-                Documentation of IxD process<br>
-                <a href="web_style_guide_mapping.html">View More...</a>
-                
-            </p>
+                    <h2 class="p-name">Group Project</h2>
+                        <p>
+                            A group project where we were given a company and a style guide to create for them<br>
+                            <a href="web_style_group_project.html">View More...</a>
+                        </p>
+                    <h2>Initial Wireframes</h2>
+                        <p>
+                            Initial wireframes for this portfolio website<br>
+                            <a>View More...</a>
+                        </p>
+                </div>
+            </article>
         </main>
-
         <footer>
             <p>Brought to you by Amina Moosa</p>
         </footer>
