--- a/Designs/designs_web_style_group_project.html
+++ b/Designs/designs_web_style_group_project.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Style Guide Group</title>
+        <title>Group Project</title>
         <meta name="author" content="Amina Moosa">
         <meta name="description" content="Web style guide group exercise displayed here">
     </head>
@@ -19,9 +19,10 @@
         </header>
         <nav>
             <a href="designs.html">Designs</a>
-            <a>Group Project</a>
-            <a class="u=url" href="design_week_5.html">Week 5</a>
+            <a href="design_week_5.html">Week 5</a>
             <a href="design_week_6.html">Week 6</a>
+            <a>Group Project</a>
+            <a href="designs_wireframe.html">Wireframes</a>
         </nav>
 
         <main>
