Designs and Blog Main page
Updated the designs and blogs main page

--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -25,22 +25,31 @@
         </nav>
 
         <main>
-            <article class="h-entry">
-                <div class="e-content">
+            <div class="h-feed">
                     <h1 class="p-name">Design Section</h1>
                     <p class="p-summary">Follow along for my Design Journal and planning for this portfolio</p>
+                <article class="h-entry e-content">
 
                     
                     <h2 class="p-name">Designs Week 5</h2>
                         <p>
-                            <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
+                            Research for my Design Section of the website, including but not limited to:<br>
+                            <ul>
+                                <li>Documentation of my IxD Process</li>
+                                <li>Style process documentation</li>
+                                <li>Style guide mapping</li>
+                            </ul>
                             <a href="design_week_5.html">View More...</a>
                         </p>
 
-                    <h2>Designs Week 6</h2>
+                    <h2 class="p-name">Designs Week 6</h2>
                         <p>
-                            Documentation of IxD process<br>
-                            <a href="web_style_guide_mapping.html">View More...</a>
+                            Adding more to the Design Section of the website such as:<br>
+                            <ul>
+                                <li>Style Guide</li>
+                                <li>Wireframe</li>
+                            </ul>
+                            <a href="design_week_6.html">View More...</a>
                         </p>
 
                     <h2 class="p-name">Group Project</h2>
@@ -48,13 +57,15 @@
                             A group project where we were given a company and a style guide to create for them<br>
                             <a href="web_style_group_project.html">View More...</a>
                         </p>
-                    <h2>Initial Wireframes</h2>
+
+                    <h2 class="p-name">Initial Wireframes</h2>
                         <p>
                             Initial wireframes for this portfolio website<br>
                             <a>View More...</a>
                         </p>
-                </div>
-            </article>
+                
+                </article>
+            </div>
         </main>
         <footer>
             <p>Brought to you by Amina Moosa</p>
