--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -29,6 +29,11 @@
             <article class="h-entry">
                 <div class="e-content">
                     Stick around while I add em here!
+
+                    <p>
+                        Initial: <br>
+                        <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
+                    </p>
                 </div>
             </article>
         </main>
@@ -37,6 +42,6 @@
         <footer>
             Brought to you by Amina Moosa
         </footer>
-        
+
     </body>
 </html>
