--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -28,7 +28,7 @@
         
         <div class="h-feed">
         <h1 class="p-name">Blogs</h1>
-        <article class="h-entry ">
+        <article class="h-entry e-content">
 
         <h2 class="p-name">Week 1 Blog Post</h2>
             <h3> Setting up GitHub and publishing Pages.</h3>
@@ -37,11 +37,11 @@
                 Was I confused? Absolutely... <br>
                 Read more <a href="blog_week_1.html">Blog Week 1</a> <br>
                 </p>
-                <p>By Amina </p>
+                <p class="h-card">By Amina </p>
         
         <h2 class="p-name"> Week 2 Blog Post</h2>
-            <h3>You Say You Want a Revolution? Hypertext and the Laws of Media - Moulthrop (2003)</h3>
-                <p class="p-summary">"You Say You Want a Revolution? Hypertext and the Laws of Media" was an essay by Stuart Moulthrop originally published in 1991 and then later included in the new Media Reader in 2003. <br>
+            <h3>You Say You Want a Revolution? Hypertext and the Laws of Media - <cite>Moulthrop (2003)</cite></h3>
+                <p class="p-summary"><q>You Say You Want a Revolution? Hypertext and the Laws of Media</q> was an essay by Stuart Moulthrop originally published in 1991 and then later included in the new Media Reader in 2003. <br>
                     Moulthrop's essay explores the concept of hypertext and it's potential to revolutionize media and culture, which is DEFINITELY relevant to the Internet today. <br>
                     Read more <a href="blog_week_2.html">Blog Week 2</a> <br>
                 </p>
@@ -49,7 +49,7 @@
         <h2 class="p-name">Week 3 Blog Post</h2>
             <h3>Interaction Design and Web-Style Guide</h3>
             <p class="p-summary">
-                Working through the slides for Interaction Design (Geyser, 2023) for the web, define and discuss 
+                Working through the slides for Interaction Design <cite>(Geyser, 2023)</cite> for the web, define and discuss 
                 your user alignment, and map out your site's content, experience, and interface elements.<br>
                 Read more <a href="blog_week_3.html">Blog Week 3</a>
 
@@ -60,27 +60,37 @@
             <p class="p-summary">
                 Design Process: The first iteration of my web-style guide is as follows:
                 The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
-                This is translated through the main colour palette and the fonts (Elementor, 2020). 
+                This is translated through the main colour palette and the fonts <cite>(Elementor, 2020)</cite>.
                 There are ideas and variations for some aspects in the style-guide...
                 Read more <a href="blog_week_4.html">Blog Week 4</a>
             </p>
 
         <h2 class="p-name">Week 5 Design Section Post</h2>
-            <h3></h3>
-            <p class="p-summary">
-
+            <p>
+                Research for my Design Section of the website, including but not limited to:<br>
+                <ul>
+                    <li>Documentation of my IxD Process</li>
+                    <li>Style process documentation</li>
+                    <li>Style guide mapping</li>
+                </ul>
+                <a href="design_week_5.html">View More...</a>
             </p>
 
-        <h2 class="p-name">Week 6 Design Section Post</h2>
-            <h3></h3>
-            <p class="p-summary">
-
+        <h2 class="p-name">Week 6 Design Section Post</h2>           
+            <p>
+                Adding more to the Design Section of the website such as:<br>
+                <ul>
+                    <li>Style Guide</li>
+                    <li>Wireframe</li>
+                </ul>
+                <a href="design_week_6.html">View More...</a>
             </p>
 
         <h2 class="p-name">Week 7 Blog Post</h2>
             <h3></h3>
             <p class="p-summary">
-
+                Websites to consider for the upcoming Essay: UX & UI Analysis.<br>
+                Read more <a href="blog_week_7.html">Week 7</a>
             </p>
 
         </article>
@@ -89,4 +99,4 @@
             <p>Brought to you by Amina Moosa</p>
         </footer>
     </body>
-</html>
+</html> 
