<nav> and sub<nav> updated
Fixed the tags of <nav> and the sub <nav> for the blogs and the designs section

--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -10,12 +10,14 @@
 
     <body>
         <header>
-            <a href="../index.html">Home</a>
-            <a href="blog.html">Blogs</a> 
-            <a href="../Designs/designs.html">Designs</a>
-            <a href="../Essays/essay.html">Essays</a> 
-            <a href="../Portfolio/portfolio.html">Portfolio</a>
-            <a href="../Profile/profile.html">Profile</a>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="blog.html">Blogs</a> 
+                <a href="../Designs/designs.html">Designs</a>
+                <a href="../Essays/essay.html">Essays</a> 
+                <a href="../Portfolio/portfolio.html">Portfolio</a>
+                <a href="../Profile/profile.html">Profile</a>
+            </nav>
         </header>
             
 
@@ -29,7 +31,7 @@
                     <a href="../Designs/design_week_6.html">Week 6</a>
                     <a>Week 7</a>
                 </nav>
-                
+
                 <article class="h-entry">
                     <h1 class="p-name">Week 7 Blog Post</h1>
                     <p>
