--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -9,12 +9,14 @@
 </head>
     <body>
         <header>
+            <nav>
                 <a href="../index.html">Home</a>
                 <a href="../Blogs/blog.html">Blogs</a> 
                 <a>Designs</a>
                 <a href="../Essays/essay.html">Essays</a> 
                 <a href="../Portfolio/portfolio.html">Portfolio</a>
                 <a href="../Profile/profile.html">Profile</a>
+            </nav>
         </header>
         
 
@@ -26,7 +28,7 @@
                 <a href="web_style_group_project.html">Group Project</a>
                 <a href="designs_wireframe.html">Wireframes</a>
             </nav>
-            
+
             <div class="h-feed">
                     <h1 class="p-name">Design Section</h1>
                     <p class="p-summary">Follow along for my Design Journal and planning for this portfolio</p>
