--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -10,12 +10,14 @@
 
     <body>
         <header>
-            <a href="../index.html">Home</a>
-            <a href="../Blogs/blog.html">Blogs</a> 
-            <a>Designs</a>
-            <a href="../Essays/essay.html">Essays</a> 
-            <a href="../Portfolio/portfolio.html">Portfolio</a>
-            <a href="../Profile/profile.html">Profile</a>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../Blogs/blog.html">Blogs</a> 
+                <a>Designs</a>
+                <a href="../Essays/essay.html">Essays</a> 
+                <a href="../Portfolio/portfolio.html">Portfolio</a>
+                <a href="../Profile/profile.html">Profile</a>
+            </nav>
         </header>
         
 
@@ -27,7 +29,7 @@
                 <a href="designs_web_style_group_project.html">Group Project</a>
                 <a>Wireframes</a>
             </nav>
-            
+
             <article class="h-entry">
                 <div class="e-content">
                     Stick around while I add em here!
