--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -9,12 +9,14 @@
 </head>
     <body>
         <header>
-            <a href="../index.html">Home</a>
-            <a href="blog.html">Blogs</a> 
-            <a href="../Designs/designs.html">Designs</a>
-            <a href="../Essays/essay.html">Essays</a> 
-            <a href="../Portfolio/portfolio.html">Portfolio</a>
-            <a href="../Profile/profile.html">Profile</a>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="blog.html">Blogs</a> 
+                <a href="../Designs/designs.html">Designs</a>
+                <a href="../Essays/essay.html">Essays</a> 
+                <a href="../Portfolio/portfolio.html">Portfolio</a>
+                <a href="../Profile/profile.html">Profile</a>
+            </nav>
         </header>
             
         
