--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -9,12 +9,14 @@
 </head>
     <body>
         <header>
-            <a href="../index.html">Home</a>
-            <a href="blog.html">Blogs</a> 
-            <a href="../Designs/designs.html">Designs</a>
-            <a href="../Essays/essay.html">Essays</a> 
-            <a href="../Portfolio/portfolio.html">Portfolio</a>
-            <a href="../Profile/profile.html">Profile</a>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="blog.html">Blogs</a> 
+                <a href="../Designs/designs.html">Designs</a>
+                <a href="../Essays/essay.html">Essays</a> 
+                <a href="../Portfolio/portfolio.html">Portfolio</a>
+                <a href="../Profile/profile.html">Profile</a>
+            </nav>
         </header>
             
 
@@ -28,7 +30,7 @@
                 <a href="../Designs/design_week_6.html">Week 6</a>
                 <a href="blog_week_7.html">Week 7</a>
             </nav>
-            
+
             <article class="h-entry">
                 <h1 class="p-name">Week 4 Blog Post</h1>
                 <p>
