--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -9,12 +9,14 @@
 </head>
     <body>
         <header>
-            <a href="../index.html">Home</a>
-            <a href="../Blogs/blog.html">Blogs</a> 
-            <a>Designs</a>
-            <a href="../Essays/essay.html">Essays</a> 
-            <a href="../Portfolio/portfolio.html">Portfolio</a>
-            <a href="../Profile/profile.html">Profile</a>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../Blogs/blog.html">Blogs</a> 
+                <a>Designs</a>
+                <a href="../Essays/essay.html">Essays</a> 
+                <a href="../Portfolio/portfolio.html">Portfolio</a>
+                <a href="../Profile/profile.html">Profile</a>
+            </nav>
         </header>
             
 
@@ -26,7 +28,7 @@
                 <a href="web_style_group_project.html">Group Project</a>
                 <a href="designs_wireframe.html">Wireframes</a>
             </nav>
-            
+
             <article class="h-entry">
                 <div class="e-content">
                 <h2 class="p-name">Documentation of IxD Process</h2>
