--- a/Designs/designs_web_style_group_project.html
+++ b/Designs/designs_web_style_group_project.html
@@ -10,12 +10,14 @@
 
     <body>
         <header>
-            <a href="../index.html">Home</a>
-            <a href="../Blogs/blog.html">Blogs</a> 
-            <a>Designs</a>
-            <a href="../Essays/essay.html">Essays</a> 
-            <a href="../Portfolio/portfolio.html">Portfolio</a>
-            <a href="../Profile/profile.html">Profile</a>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="../Blogs/blog.html">Blogs</a> 
+                <a>Designs</a>
+                <a href="../Essays/essay.html">Essays</a> 
+                <a href="../Portfolio/portfolio.html">Portfolio</a>
+                <a href="../Profile/profile.html">Profile</a>
+            </nav>
         </header>
         
 
@@ -27,7 +29,7 @@
                 <a>Group Project</a>
                 <a href="designs_wireframe.html">Wireframes</a>
             </nav>
-            
+
             <h1 class="p-name">Web Style Guide Group Project</h1>
             <p>
                 Creating a style guide for a afro manga company
