--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -30,7 +30,7 @@
                 <p class="h-card">
                     <figure>
                         <figcaption>That's me!</figcaption>
-                        <img class="u-photo" src="../Images/profile_avatar.png" alt="A avatar of me" width="300" height="300">
+                        <img class="u-photo" src="../Images/profile_avatar_2.png" alt="A avatar of me" width="300" height="300">
                     </figure>
                     <span class="p-name">Amina Moosa</span><br>
                     <a class="u-email" href="mailto:2750697@students.wits.ac.za">2750697@wits.ac.za</a><br>
