--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="Images/profile_avatar.png" type="image/x-icon">
     <link rel="stylesheet" href="normalize.css"/>
-    <!--<link rel="stylesheet" href="index.css"/>-->
+    <!--<link rel="stylesheet" href="Styles/main.css"/>-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
