Added Nav logo image
Added logo nav image and logo, and added buger-button html

--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -10,6 +10,11 @@
     <body>
         <header>
             <nav>
+                <img src="Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
+                <span class="logo">Amina Moosa</span>
+                <script src="https://kit.fontawesome.com/486a7eab66.js" crossorigin="anonymous"></script>
+                <input type="checkbox"  id="check"/>
+                <label for="check" class="burger-button"><i class="fa-solid fa-bars"></i></label>
                 <a href="../index.html">Home</a>
                 <a href="../Blogs/blog.html">Blogs</a> 
                 <a>Designs</a>
