--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -15,12 +15,14 @@
                 <script src="https://kit.fontawesome.com/486a7eab66.js" crossorigin="anonymous"></script>
                 <input type="checkbox"  id="check"/>
                 <label for="check" class="burger-button"><i class="fa-solid fa-bars"></i></label>
-                <a href="../index.html">Home</a>
-                <a href="blog.html">Blogs</a> 
-                <a href="../Designs/designs.html">Designs</a>
-                <a href="../Essays/essay.html">Essays</a> 
-                <a href="../Portfolio/portfolio.html">Portfolio</a>
-                <a href="../Profile/profile.html">Profile</a>
+                <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="blog.html">Blogs</a> </li>
+                <li><a href="../Designs/designs.html">Designs</a></li>
+                <li><a href="../Essays/essay.html">Essays</a> </li>
+                <li><a href="../Portfolio/portfolio.html">Portfolio</a></li>
+                <li><a href="../Profile/profile.html">Profile</a></li>
+                </ul>
             </nav>
         </header>
 
