--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -7,11 +7,20 @@
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Profile containing information about me and contact information">
     <link rel="stylesheet" href="profile.css">
+
+    <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
+    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/main.css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400..700&family=Iansui&family=Londrina+Sketch&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Share+Tech+Mono&family=Tangerine:wght@400;700&family=Updock&display=swap" rel="stylesheet">
+
 </head>
     <body>
         <header>
             <nav>
-                <img src="Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
+                <img src="../Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
                 <span class="logo">Amina Moosa</span>
                 <script src="https://kit.fontawesome.com/486a7eab66.js" crossorigin="anonymous"></script>
                 <input type="checkbox"  id="check"/>
@@ -22,7 +31,7 @@
                 <li><a href="../Designs/designs.html">Designs</a></li>
                 <li><a href="../Essays/essay.html">Essays</a></li> 
                 <li><a href="../Portfolio/portfolio.html">Portfolio</a></li>
-                <li><a>Profile</a></li>
+                <li><a class="active">Profile</a></li>
                 </ul>
             </nav>
 
@@ -33,10 +42,11 @@
         </header>
 
         <main>
+            <div class="h-entry section-wrapper">
             <h1 class="p-name" >About me</h1>
+            <article class="e-content ">
                 <p class="h-card">
-                    <figure>
-                        <figcaption>That's me!</figcaption>
+                    <figure> 
                         <img class="u-photo" src="../Images/profile_avatar_2.png" alt="A avatar of me" width="300" height="300">
                     </figure>
                     <span class="p-name">Amina Moosa</span><br>
@@ -53,7 +63,8 @@
                     Follow along for more updates on my web portfolio.
                 </p>
 
-                
+            </article>
+            </div>    
         </main>
 
         <footer>
