--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -6,11 +6,20 @@
     <title>Essays</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Essays for the module">
+    <link rel="stylesheet" href="essay.css">
+
+    <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
+    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/main.css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400..700&family=Iansui&family=Londrina+Sketch&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Share+Tech+Mono&family=Tangerine:wght@400;700&family=Updock&display=swap" rel="stylesheet">
 </head>
     <body>
         <header>
             <nav>
-                <img src="Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
+                <img src="../Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
                 <span class="logo">Amina Moosa</span>
                 <script src="https://kit.fontawesome.com/486a7eab66.js" crossorigin="anonymous"></script>
                 <input type="checkbox"  id="check"/>
@@ -19,7 +28,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../Blogs/blog.html">Blogs</a> </li>
                 <li><a href="../Designs/designs.html">Designs</a></li>
-                <li><a>Essays</a> </li>
+                <li><a class="active">Essays</a> </li>
                 <li><a href="../Portfolio/portfolio.html">Portfolio</a></li>
                 <li><a href="../Profile/profile.html">Profile</a></li>
                 </ul>
@@ -27,7 +36,12 @@
         </header>
 
         <main>
-            <p>No essays yet. Stay tuned!</p>
+            <div class="section-wrapper">
+                <h1 class="p-name">Essays</h1>
+                <article class="h-entry e-content">
+                    <p>No essays yet. Stay tuned!</p>
+                </article>
+            </div>
         </main>
         
         <footer>
