--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
     <body>
         <header>
-            <nav>              
+            <nav class="Main-Nav">              
                 <img src="Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
                 <span class="logo">Amina Moosa</span>
                 <script src="https://kit.fontawesome.com/486a7eab66.js" crossorigin="anonymous"></script>
