Designs Main Css

--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -6,6 +6,15 @@
     <title>Week 5</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Design Process and Documentation of IxD Process">
+    <link rel="stylesheet" href="designs.css">
+
+    <link rel="icon" href="../Images/profile_avatar_2.png" type="image/x-icon">
+    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/main.css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400..700&family=Iansui&family=Londrina+Sketch&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Share+Tech+Mono&family=Tangerine:wght@400;700&family=Updock&display=swap" rel="stylesheet">
 </head>
     <body>
         <header>
