--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -41,12 +41,12 @@
                 <a href="designs.html">Designs</a>
                 <a>Week 5</a>
                 <a href="design_week_6.html">Week 6</a>
-                <a href="web_style_group_project.html">Group Project</a>
+                <a href="designs_web_style_group_project.html">Group Project</a>
                 <a href="designs_wireframe.html">Wireframes</a>
             </nav>
 
             <article class="h-entry">
-                <div class="e-content">
+                <div class="e-content section-wrapper">
                 <h2 class="p-name">Documentation of IxD Process</h2>
                     <p>
                         <h3 class="p-name">Goal Alignment</h3>
@@ -76,7 +76,7 @@
 
                         <figure>
                             <figcaption>Infomation contnt and how folders are structured</figcaption>
-                            <img src="../Images/Designs/Week_5/blog_5_information_content.png" alt="Information content and how folders are structured">
+                            <img class="img-design" src="../Images/Designs/Week_5/blog_5_information_content.png" alt="Information content and how folders are structured">
                         </figure>
                     </p>
                         
@@ -84,7 +84,7 @@
                         <h3 class="p-name">User Flow - Screens, Behaviour, and Decisions</h3>
                         <figure>
                             <figcaption>User Flow experience annotated</figcaption>
-                            <img class="u-photo user-experience-flow"src="../Images/Designs/Week_5/blog_5_information_user_experience.png" alt="User flow experience annotated">
+                            <img class="u-photo user-experience-flow img-design"src="../Images/Designs/Week_5/blog_5_information_user_experience.png" alt="User flow experience annotated">
                         </figure>
                     </p>
 
@@ -119,15 +119,15 @@
                         <h3 class="p-name">Style process documentation</h3>
                         <figure>
                             <figcaption>First image in the web style guide</figcaption>
-                            <img class="u-photo web-style-guide"  src="../Images/Designs/Week_5/1.png" alt="First image in the web style guide">
+                            <img class="u-photo web-style-guide img-design"  src="../Images/Designs/Week_5/1.png" alt="First image in the web style guide">
                         </figure>
                         <figure>
                             <figcaption>Second image in the web style guide</figcaption>
-                            <img class="u-photo web-style-guide" src="../Images/Designs/Week_5/2.png" alt="Second image in the web style guide">
+                            <img class="u-photo web-style-guide img-design" src="../Images/Designs/Week_5/2.png" alt="Second image in the web style guide">
                         </figure>
                         <figure>
                             <figcaption>Third image in the web style guide</figcaption>
-                            <img class="u-photo web-style-guide" src="../Images/Designs/Week_5/3.png" alt="Third image in the web style guide">
+                            <img class="u-photo web-style-guide img-design" src="../Images/Designs/Week_5/3.png" alt="Third image in the web style guide">
                         </figure>
                     </p>
 
@@ -135,7 +135,7 @@
                         <h3 class="p-name">Colour Choices</h3>
                         Regarding contrast between values of hex colour value #045782 (foreground) and #b5d4ed (background): <br>
                         The contrast ration is 5, and it it's a pass on normal text, large text and graphical objects and user interface components.
-                        <img class="u-photo" src="../Images/Designs/Week_5/contrast checker.png" alt="contrast checker image screenshot" >
+                        <img class="u-photo img-design" src="../Images/Designs/Week_5/contrast checker.png" alt="contrast checker image screenshot" >
 
 
                     </p>
