--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -46,7 +46,7 @@
             </nav>
 
             <article class="h-entry">
-                <div class="e-content">
+                <div class="e-content section-wrapper">
                 <h1 class="p-name">Research for Design Section</h1>
 
                 <h2 class="p-name">Style Guides</h2>
