--- a/Designs/designs_web_style_group_project.html
+++ b/Designs/designs_web_style_group_project.html
@@ -46,24 +46,25 @@
                 <a href="designs_wireframe.html">Wireframes</a>
             </nav>
 
+            <div class="e-content h-entry section-wrapper">
             <h1 class="p-name">Web Style Guide Group Project</h1>
             <p>
                 Creating a style guide for a afro manga company
             </p>
             <p>
-                <img src="../Images/Designs/Group_Project/1.jpg" alt="Img 1 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/2.jpg" alt="Img 2 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/3.jpg" alt="Img 3 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/4.jpg" alt="Img 4 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/5.jpg" alt="Img 5 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/6.jpg" alt="Img 6 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/7.jpg" alt="Img 7 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/8.jpg" alt="Img 8 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/9.jpg" alt="Img 9 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/10.jpg" alt="Img 10 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/11.jpg" alt="Img 11 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/12.jpg" alt="Img 12 for Web Style Guide group project" height="600" width="1440">
-                <img src="../Images/Designs/Group_Project/13.jpg" alt="Img 13 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/1.jpg" alt="Img 1 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/2.jpg" alt="Img 2 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/3.jpg" alt="Img 3 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/4.jpg" alt="Img 4 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/5.jpg" alt="Img 5 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/6.jpg" alt="Img 6 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/7.jpg" alt="Img 7 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/8.jpg" alt="Img 8 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/9.jpg" alt="Img 9 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/10.jpg" alt="Img 10 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/11.jpg" alt="Img 11 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/12.jpg" alt="Img 12 for Web Style Guide group project" height="600" width="1440">
+                <img class="u-photo img-design" src="../Images/Designs/Group_Project/13.jpg" alt="Img 13 for Web Style Guide group project" height="600" width="1440">
             </p>
 
             <p class="p-name">
@@ -76,6 +77,7 @@
                     <li>Amina Moosa</li>
                 </ul>
             </p>
+        </div>
         </main>
 
         <a href="#">To the top</a>
