Fixed Designs Sub Nav

--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -73,7 +73,7 @@
                     <h2 class="p-name">Initial Wireframes</h2>
                         <p>
                             Initial wireframes for this portfolio website<br>
-                            <a class="view-more">View More...</a>
+                            <a class="view-more" href="designs_wireframe.html">View More...</a>
                         </p>
                     </div>
                 
