--- a/Designs/designs_web_style_group_project.html
+++ b/Designs/designs_web_style_group_project.html
@@ -38,13 +38,7 @@
         
 
         <main>
-            <nav>
-                <a href="designs.html">Designs</a>
-                <a href="design_week_5.html">Week 5</a>
-                <a href="design_week_6.html">Week 6</a>
-                <a>Group Project</a>
-                <a href="designs_wireframe.html">Wireframes</a>
-            </nav>
+            
 
             <div class="e-content h-entry section-wrapper">
             <h1 class="p-name">Web Style Guide Group Project</h1>
@@ -78,6 +72,15 @@
                 </ul>
             </p>
         </div>
+        <section>
+            <nav class="Sub-Nav">
+                <a href="designs.html">Designs</a>
+                <a href="design_week_5.html">Week 5</a>
+                <a href="design_week_6.html">Week 6</a>
+                <a class="active">Group Project</a>
+                <a href="designs_wireframe.html">Wireframes</a>
+            </nav>
+            </section>
         </main>
 
         <a href="#">To the top</a>
