--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -38,13 +38,7 @@
         
 
         <main>
-            <nav>
-                <a href="designs.html">Designs</a>
-                <a href="design_week_5.html">Week 5</a>
-                <a href="design_week_6.html">Week 6</a>
-                <a href="designs_web_style_group_project.html">Group Project</a>
-                <a>Wireframes</a>
-            </nav>
+            
 
             <article class="h-entry">
                 <div class="e-content">
@@ -56,6 +50,16 @@
                     </p>
                 </div>
             </article>
+            <section>
+                <nav class="Sub-Nav">
+                    <a href="designs.html">Designs</a>
+                    <a href="design_week_5.html">Week 5</a>
+                    <a href="design_week_6.html">Week 6</a>
+                    <a href="designs_web_style_group_project.html">Group Project</a>
+                    <a class="active">Wireframes</a>
+                </nav>
+                </section>
+
         </main>
 
         <a href="#">To the Top</a>
