--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -19,7 +19,7 @@
     <body>
         <header>
             <nav class="Main-Nav">
-                <img src="Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
+                <img src="../Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
                 <span class="logo">Amina Moosa</span>
                 <script src="https://kit.fontawesome.com/486a7eab66.js" crossorigin="anonymous"></script>
                 <input type="checkbox"  id="check"/>
@@ -106,22 +106,24 @@
                 <p>
                     <!--Wireframe images-->
                 </p>
-                
+                <a href="#" class="to-top">To the Top</a>
             </div>
             </article>
 
             <section>
                 <nav class="Sub-Nav">
-                    <a href="designs.html">Designs</a>
-                    <a href="design_week_5.html">Week 5</a>
-                    <a class="active">Week 6</a>
-                    <a href="designs_web_style_group_project.html">Group Project</a>
-                    <a href="designs_wireframe.html">Wireframes</a>
+                    <ul>
+                    <li><a href="designs.html">Designs</a></li>
+                    <li><a href="design_week_5.html">Week 5</a></li>
+                    <li><a class="active">Week 6</a></li>
+                    <li><a href="designs_web_style_group_project.html">Group Project</a></li>
+                    <li><a href="designs_wireframe.html">Wireframes</a></li>
+                    </ul>
                 </nav>
                 </section>
 
         </main>
-        <a href="#">To the Top</a>
+        
         <footer>
             <p class="footer">
                 <a href="mailto:2750697@students.wits.ac.za">
