--- a/Designs/designs_web_style_group_project.html
+++ b/Designs/designs_web_style_group_project.html
@@ -20,7 +20,7 @@
     <body>
         <header>
             <nav class="Main-Nav">
-                <img src="Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
+                <img src="../Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
                 <span class="logo">Amina Moosa</span>
                 <script src="https://kit.fontawesome.com/486a7eab66.js" crossorigin="anonymous"></script>
                 <input type="checkbox"  id="check"/>
@@ -68,22 +68,25 @@
                     <li>Elri Greyling</li>
                     <li>Ali Raffee</li>
                     <li>Lubabalo Dlwathi</li>
-                    <li>Amina Moosa</li>
+                    <li><a href="../Profile/profile.html" class="to-top">Amina Moosa</a></li>
                 </ul>
             </p>
+            <a href="#" class="to-top">To the top</a>
         </div>
         <section>
             <nav class="Sub-Nav">
-                <a href="designs.html">Designs</a>
-                <a href="design_week_5.html">Week 5</a>
-                <a href="design_week_6.html">Week 6</a>
-                <a class="active">Group Project</a>
-                <a href="designs_wireframe.html">Wireframes</a>
+                <ul>
+                <li><a href="designs.html">Designs</a></li>
+                <li><a href="design_week_5.html">Week 5</a></li>
+                <li><a href="design_week_6.html">Week 6</a></li>
+                <li><a class="active">Group Project</a></li>
+                <li><a href="designs_wireframe.html">Wireframes</a></li>
+                </ul>
             </nav>
             </section>
         </main>
 
-        <a href="#">To the top</a>
+        
         <footer>
             <p class="footer">
                 <a href="mailto:2750697@students.wits.ac.za">
