--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -20,7 +20,7 @@
     <body>
         <header>
             <nav class="Main-Nav">
-                <img src="Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
+                <img src="../Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
                 <span class="logo">Amina Moosa</span>
                 <script src="https://kit.fontawesome.com/486a7eab66.js" crossorigin="anonymous"></script>
                 <input type="checkbox"  id="check"/>
@@ -41,28 +41,31 @@
             
 
             <article class="h-entry">
-                <div class="e-content">
+                <div class="e-content section-wrapper">
                     Stick around while I add em here!
 
                     <p>
                         Initial: <br>
-                        <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
+                        <img class="wireframe img-design" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
                     </p>
+                    <a href="#" class="to-top">To the Top</a>
                 </div>
             </article>
             <section>
                 <nav class="Sub-Nav">
-                    <a href="designs.html">Designs</a>
-                    <a href="design_week_5.html">Week 5</a>
-                    <a href="design_week_6.html">Week 6</a>
-                    <a href="designs_web_style_group_project.html">Group Project</a>
-                    <a class="active">Wireframes</a>
+                    <ul>
+                    <li><a href="designs.html">Designs</a></li>
+                    <li><a href="design_week_5.html">Week 5</a></li>
+                    <li><a href="design_week_6.html">Week 6</a></li>
+                    <li><a href="designs_web_style_group_project.html">Group Project</a></li>
+                    <li><a class="active">Wireframes</a></li>
+                    </ul>
                 </nav>
                 </section>
 
         </main>
 
-        <a href="#">To the Top</a>
+        
         <footer>
             <p class="footer">
                 <a href="mailto:2750697@students.wits.ac.za">
