Designs .active + href designs.html

--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -27,7 +27,7 @@
                 <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../Blogs/blog.html">Blogs</a> </li>
-                <li><a>Designs</a></li>
+                <li><a class="active" href="designs.html">Designs</a></li>
                 <li><a href="../Essays/essay.html">Essays</a> </li>
                 <li><a href="../Portfolio/portfolio.html">Portfolio</a></li>
                 <li><a href="../Profile/profile.html">Profile</a></li>
