--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -6,6 +6,15 @@
     <title>Blogs</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="The blog page that contains the links to all the blogs">
+    <link rel="stylesheet" href="blog.css">
+
+    <link rel="icon" href="../Images/profile_avatar.png" type="image/x-icon">
+    <link rel="stylesheet" href="../normalize.css"/>
+    <link rel="stylesheet" href="../Styles/main.css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400..700&family=Iansui&family=Londrina+Sketch&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Share+Tech+Mono&family=Tangerine:wght@400;700&family=Updock&display=swap" rel="stylesheet">
 </head>
     <body>
 
@@ -18,7 +27,7 @@
                 <label for="check" class="burger-button"><i class="fa-solid fa-bars"></i></label>
                 <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a>Blogs</a> </li>
+                <li><a class="active" href="blog.html">Blogs</a> </li>
                 <li><a href="../Designs/designs.html">Designs</a></li>
                 <li><a href="../Essays/essay.html">Essays</a> </li>
                 <li><a href="../Portfolio/portfolio.html">Portfolio</a></li>
@@ -28,16 +37,6 @@
         </header>
         
         <main>
-            <nav>
-                <a href="blog_week_1.html">Week 1</a>
-                <a href="blog_week_2.html">Week 2</a>
-                <a href="blog_week_3.html">Week 3</a>
-                <a href="blog_week_4.html">Week 4</a>
-                <a href="../Designs/design_week_5.html">Week 5</a>
-                <a href="../Designs/design_week_6.html">Week 6</a>
-                <a href="blog_week_7.html">Week 7</a>
-            </nav>
-
         <div class="h-feed">
         <h1 class="p-name">Blogs</h1>
             <article class="h-entry e-content">
@@ -105,9 +104,25 @@
                     Read more <a href="blog_week_7.html">Week 7</a>
                 </p>
 
+            </div>
             </article>
-        </div>
-    </main>
+
+            <section>
+                <nav class="Sub-Nav">
+                    <ul>
+                    <li><a class="active">Blogs</a></li>
+                    <li><a href="blog_week_1.html">Week 1</a></li>
+                    <li><a href="blog_week_2.html">Week 2</a></li>
+                    <li><a href="blog_week_3.html">Week 3</a></li>
+                    <li><a href="blog_week_4.html">Week 4</a></li>
+                    <li><a href="../Designs/design_week_5.html">Week 5</a></li>
+                    <li><a href="../Designs/design_week_6.html">Week 6</a></li>
+                    <li><a href="blog_week_7.html">Week 7</a></li>
+                    </ul>
+                </nav>
+            </section>
+        
+        </main>
     <footer>
         <p class="footer">
             <a href="mailto:2750697@students.wits.ac.za">
