Profile text update

--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -58,9 +58,9 @@
                 </p>
 
                 <p class="p-name">
-                    I'm Amina Moosa. A 3rd year Digital Arts student at Wits. 
-                    I'm currently majoring in Game Design and Interactive Media.
-                    Follow along for more updates on my web portfolio.
+                    Hey, I'm Amina Moosa- A 3rd year Digital Arts student at Wits, diving deep
+                    into the worlds of Game Design and Interactive Media. 
+                    This site is where my worlds come to life. Stick around- I'm just getting started.
                 </p>
 
             </article>
