--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </header>
         
         <main>
-            <div class="container">
+            <div class="section-wrapper">
             <h1 class="p-name">Hakuna Matata!</h1> 
                 <article class="h-entry e-content">
                 <p class="p-summary">
