--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -45,15 +45,15 @@
             <div class="h-entry section-wrapper">
             <h1 class="p-name" >About me</h1>
             <article class="e-content ">
-                <p class="h-card">
+                <p class="h-card ">
                     <figure> 
                         <img class="u-photo" src="../Images/profile_avatar_2.png" alt="A avatar of me" width="300" height="300">
                     </figure>
-                    <span class="p-name">Amina Moosa</span><br>
-                    <a class="u-email" href="mailto:2750697@students.wits.ac.za">2750697@wits.ac.za</a><br>
-                    <span class="p-org">University of Witwatersrand</span><br>
-                    <span class="p-locality">Johannesburg</span><br>
-                    <span class="p-country-name">South Africa</span>
+                    <span class="p-name me-details">Amina Moosa</span><br>
+                    <a class="u-email me-details" href="mailto:2750697@students.wits.ac.za">2750697@students.wits.ac.za</a><br>
+                    <span class="p-org me-details">University of Witwatersrand</span><br>
+                    <span class="p-locality me-details">Johannesburg</span><br>
+                    <span class="p-country-name me-details">South Africa</span>
                     
                 </p>
 
