--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -114,6 +114,7 @@
                     </div>
 
                 </article>
+                <a href="#" class="to-top">To the Top</a>
             </div>
         </main>
         
