--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -36,7 +36,7 @@
         </header>
 
         <main>
-            <div class="section-wrapper">
+            <div class="section-wrapper container">
                 <h1 class="p-name">Essays</h1>
                 <article class="h-entry e-content">
                     <p>No essays yet. Stay tuned!</p>
