--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -20,7 +20,7 @@
     <body>
         <header>
             <nav class="Main-Nav">
-                <img src="Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
+                <img src="../Images/profile_avatar_2.png" class="logoImage" alt="Avatar image of Amina Moosa"/>
                 <span class="logo">Amina Moosa</span>
                 <script src="https://kit.fontawesome.com/486a7eab66.js" crossorigin="anonymous"></script>
                 <input type="checkbox"  id="check"/>
