--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -42,7 +42,7 @@
         </header>
 
         <main>
-            <div class="h-entry section-wrapper">
+            <div class="h-entry section-wrapper container">
             <h1 class="p-name" >About me</h1>
             <article class="e-content ">
                 <p class="h-card ">
