Blogs and Designs Layout
Fix the container margins and container

--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -36,10 +36,9 @@
         </header>
 
         <main>
-            
-
+            <div class="container">
             <article class="h-entry">
-                <div class="section-wrapper">
+                <div class="container-wrapper">
                 <h1 class="p-name">Week 1 Blog Post</h1>
                 <p>
                     by 
@@ -112,8 +111,10 @@
 
                     </div>
                     <a href="#" class="to-top">To the top</a>
+                    </div>
                 </div>
             </article>
+        
                 <section>
                     <nav class="Sub-Nav">
                         <ul>
