--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -37,8 +37,9 @@
             
 
         <main>
+            <div class="container"></div>
             <article class="h-entry">
-                <div class="section-wrapper">
+                <div class="container-wrapper">
                 <h1 class="p-name">Week 3 Blog Post</h1>
                     <p>
                         by
