--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -37,10 +37,9 @@
             
 
         <main>
-            
-
+            <div class="container">
             <article class="h-entry">
-                <div class="section-wrapper">
+                <div class="container-wrapper">
                 <h1 class="p-name">Week 4 Blog Post</h1>
                 <p>
                     by 
@@ -114,6 +113,7 @@
                         </div>
                         <a href="#" class="to-top">To the top</a>
                 </div>
+            </div>
             </article>
                     <section>
                         <nav class="Sub-Nav">
