--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -37,10 +37,9 @@
             
 
         <main>
-            
-
+            <div class="container"></div>
             <article class="h-entry">
-                <div class="e-content section-wrapper">
+                <div class="e-content container-wrapper">
                 <h2 class="p-name">Documentation of IxD Process</h2>
                     <p>
                         <h3 class="p-name">Goal Alignment</h3>
