--- a/Designs/design_week_6.html
+++ b/Designs/design_week_6.html
@@ -37,10 +37,9 @@
             
 
         <main>
-            
-
+            <div class="container">
             <article class="h-entry">
-                <div class="e-content section-wrapper">
+                <div class="e-content container-wrapper">
                 <h1 class="p-name">Research for Design Section</h1>
 
                 <h2 class="p-name">Style Guides</h2>
@@ -107,6 +106,7 @@
                     <!--Wireframe images-->
                 </p>
                 <a href="#" class="to-top">To the Top</a>
+                </div>
             </div>
             </article>
 
