--- a/Designs/designs_web_style_group_project.html
+++ b/Designs/designs_web_style_group_project.html
@@ -38,9 +38,8 @@
         
 
         <main>
-            
-
-            <div class="e-content h-entry section-wrapper">
+            <div class="container">
+            <div class="e-content h-entry container-wrapper">
             <h1 class="p-name">Web Style Guide Group Project</h1>
             <p>
                 Creating a style guide for a afro manga company
@@ -73,6 +72,7 @@
             </p>
             <a href="#" class="to-top">To the top</a>
         </div>
+    </div>
         <section>
             <nav class="Sub-Nav">
                 <ul>
