--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -38,10 +38,9 @@
         
 
         <main>
-            
-
+            <div class="container">
             <article class="h-entry">
-                <div class="e-content section-wrapper">
+                <div class="e-content container-wrapper">
                     Stick around while I add em here!
 
                     <p>
@@ -50,6 +49,7 @@
                     </p>
                     <a href="#" class="to-top">To the Top</a>
                 </div>
+            </div>
             </article>
             <section>
                 <nav class="Sub-Nav">
