--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -43,69 +43,56 @@
 
             <div class="blog-card">
             <h2 class="p-name">Week 1 Blog Post</h2>
-                <h3> Setting up GitHub and publishing Pages.</h3>
                     <p class="p-summary">The process was relatively smooth, save for some hiccups. <br>
                     The first time I tried setting up my page and publishing it to GitHub, I then opened the link, only to find "Error 404.". 
                     Was I confused? Absolutely... <br>
-                    Read more <a href="blog_week_1.html">Blog Week 1</a> <br>
+                    Read more <a href="blog_week_1.html" class="view-more">Blog Week 1</a> <br>
                     </p>
-                    <p class="h-card">By Amina </p>
             </div>
             
             <div class="blog-card">
             <h2 class="p-name"> Week 2 Blog Post</h2>
-                <h3>You Say You Want a Revolution? Hypertext and the Laws of Media - <cite>Moulthrop (2003)</cite></h3>
                     <p class="p-summary"><q>You Say You Want a Revolution? Hypertext and the Laws of Media</q> was an essay by Stuart Moulthrop originally published in 1991 and then later included in the new Media Reader in 2003. <br>
                         Moulthrop's essay explores the concept of hypertext and it's potential to revolutionize media and culture, which is DEFINITELY relevant to the Internet today. <br>
-                        Read more <a href="blog_week_2.html">Blog Week 2</a> <br>
+                        Read more <a href="blog_week_2.html" class="view-more">Blog Week 2</a> <br>
                     </p>
             </div>
              
             <div class="blog-card">
             <h2 class="p-name">Week 3 Blog Post</h2>
-                <h3>Interaction Design and Web-Style Guide</h3>
                 <p class="p-summary">
                     Working through the slides for Interaction Design <cite>(Geyser, 2023)</cite> for the web, define and discuss 
                     your user alignment, and map out your site's content, experience, and interface elements.<br>
-                    Read more <a href="blog_week_3.html">Blog Week 3</a>
+                    Read more <a href="blog_week_3.html" class="view-more">Blog Week 3</a>
 
                 </p>
             </div>
 
             <div class="blog-card">
             <h2 class="p-name">Week 4 Blog Post</h2>
-                <h3>Design Section Mapping</h3>
                 <p class="p-summary">
                     Design Process: The first iteration of my web-style guide is as follows:
                     The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
                     This is translated through the main colour palette and the fonts <cite>(Elementor, 2020)</cite>.
                     There are ideas and variations for some aspects in the style-guide...
-                    Read more <a href="blog_week_4.html">Blog Week 4</a>
+                    Read more <a href="blog_week_4.html" class="view-more">Blog Week 4</a>
                 </p>
             </div>
 
             <div class="blog-card">
             <h2 class="p-name">Week 5 Design Section Post</h2>
                 <p>
-                    Research for my Design Section of the website, including but not limited to:<br>
-                    <ul>
-                        <li>Documentation of my IxD Process</li>
-                        <li>Style process documentation</li>
-                        <li>Style guide mapping</li>
-                    </ul>
-                    <a href="design_week_5.html">View More...</a>
+                    Research for my Design Section of the website, including but not limited to the documentation of my IxD process, 
+                    style process documentation, and style guide mapping
+                    <a href="design_week_5.html" class="view-more">View More...</a>
                 </p>
             </div>
 
             <div class="blog-card">
             <h2 class="p-name">Week 6 Design Section Post</h2>           
                 <p>
-                    Adding more to the Design Section of the website such as:<br>
-                    <ul>
-                        <li>Style Guide</li>
-                        <li>Wireframe</li>
-                    </ul>
-                    <a href="design_week_6.html">View More...</a>
+                    Adding more to the Design Section of the website such as the style guide or wireframes
+                    <a href="design_week_6.html" class="view-more">View More...</a>
                 </p>
             </div>
 
@@ -114,7 +101,7 @@
                 <h3></h3>
                 <p class="p-summary">
                     Websites to consider for the upcoming Essay: UX & UI Analysis.<br>
-                    Read more <a href="blog_week_7.html">Week 7</a>
+                    Read more <a href="blog_week_7.html" class="view-more">Week 7</a>
                 </p>
             </div>
 
