--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -38,8 +38,9 @@
             
 
             <main>
+                <div class="container">
                 <article class="h-entry">
-                    <div class="section-wrapper">
+                    <div class="container-wrapper">
                     <h1 class="p-name">Week 7 Blog Post</h1>
                     <p>
                         by 
@@ -108,6 +109,7 @@
                             </div>
                             <a href="#" class="to-top">To the Top</a>
                         </div>
+                    </div>
                     </article>
 
                 <section>
