Media query update

--- a/Designs/designs_wireframe.html
+++ b/Designs/designs_wireframe.html
@@ -38,14 +38,14 @@
         
 
         <main>
-            <div class="container">
+            <div class="group-container">
             <article class="h-entry">
-                <div class="e-content container-wrapper">
+                <div class="e-content group-container-wrapper">
                     Stick around while I add em here!
 
                     <p>
                         Initial: <br>
-                        <img class="wireframe img-design" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
+                        <img class="wireframe img-design img-group" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
                     </p>
                     <a href="#" class="to-top">To the Top</a>
                 </div>
